--- a/Application/Pool/View/Order/index.html
+++ b/Application/Pool/View/Order/index.html
@@ -121,8 +121,10 @@
                                     <td>
                                             <if condition="!$v.trade_id">
                                                     <{$v.pool_trans_id}>
+                                                    <else/>
+                                                    <{$v.trade_id}>
                                                 </if>
-                                        <{$v.trade_id}>
+                                        
                                     </td>
                                     <td>
                                         <{$v.phone}>
@@ -136,15 +138,19 @@
                                     <td>
                                             <if condition="!$v.pay_applydate">
                                                 <{$v.pool_order_time|date='Y-m-d H:i:s',###}>
+                                                <else/>
+                                                <{$v.pay_applydate|date='Y-m-d H:i:s',###}>
                                             </if>
-                                            <{$v.pay_applydate|date='Y-m-d H:i:s',###}>
+                                            
                                         </td>
     
                                         <td>
                                                 <if condition="!$v.pay_successdate">
                                                     <{$v.pool_finish_time|date='Y-m-d H:i:s',###}>
+                                                    <else/>
+                                                    <{$v.pay_successdate|date='Y-m-d H:i:s',###}>
                                                 </if>
-                                            <{$v.pay_successdate|date='Y-m-d H:i:s',###}>
+                                            
                                         </td>
                                     <td>
                                         <if condition="$v.status eq 0 ">未回调
