--- a/Application/Pool/View/Order/index.html
+++ b/Application/Pool/View/Order/index.html
@@ -136,20 +136,22 @@
                                         <{$sp_list[$v['channel']]}>
                                     </td>
                                     <td>
-                                            <if condition="!$v.pay_applydate">
-                                                <{$v.pool_order_time|date='Y-m-d H:i:s',###}>
-                                                <else/>
+
+                                            <if condition="$v.pay_applydate egt 0">
+                                                
                                                 <{$v.pay_applydate|date='Y-m-d H:i:s',###}>
+                                                <else/>
+                                                <{$v.pool_order_time|date='Y-m-d H:i:s',###}>
                                             </if>
                                             
                                         </td>
     
                                         <td>
-                                                <if condition="!$v.pay_successdate">
-                                                    <{$v.pool_finish_time|date='Y-m-d H:i:s',###}>
-                                                    <else/>
-                                                    <{$v.pay_successdate|date='Y-m-d H:i:s',###}>
-                                                </if>
+                                            <if condition="$v.pay_successdate egt 0">
+                                                <{$v.pay_successdate|date='Y-m-d H:i:s',###}>
+                                                <else/>
+                                                <{$v.pool_finish_time|date='Y-m-d H:i:s',###}>
+                                            </if>
                                             
                                         </td>
                                     <td>
