--- a/Application/Admin/View/PoolProviderOrder/index.html
+++ b/Application/Admin/View/PoolProviderOrder/index.html
@@ -136,6 +136,13 @@
                         </thead>
                         <tbody>
                             <volist name="list" id="v">
+                                <php>
+                                        $v['trade_id'] = !$v['trade_id'] ? $v['pool_trans_id'] :$v['trade_id'];
+                                        $v['pay_applydate'] = !$v['pay_applydate'] ? $v['pool_order_time'] :$v['pay_applydate'];
+                                        $v['pay_successdate'] = !$v['pay_successdate'] ? $v['pool_finish_time'] :$v['pay_successdate'];
+                                        $v['success_url'] = !$v['success_url'] ? $v['pool_notify_url'] :$v['success_url'];
+                                        
+                                </php>
                                 <tr>
                                     <td>
                                         <{$v.id}>
@@ -144,11 +151,7 @@
                                         <{$v.order_id}>
                                     </td>
                                     <td>
-                                        <if condition="$v.trade_id ==''">
-                                                <{$v.pool_trans_id}>
-                                        <else/>
                                         <{$v.trade_id}>
-                                        </if>
                                     </td>
                                     <td>
                                         <{$v.pool_order_id}>
@@ -175,30 +178,17 @@
                                         <{$v.pay_name}>
                                     </td>
                                     <td>
-
-                                        <if condition="$v.pay_applydate egt 0">
-                                            
-                                            <{$v.pay_applydate|date='Y-m-d H:i:s',###}>
-                                            <else/>
-                                            <{$v.pool_order_time|date='Y-m-d H:i:s',###}>
-                                        </if>
-                                        
+    
+                                            <{$v['pay_applydate'] > 0 ? date('Y-m-d H:i:s',$v['pay_applydate']):'---'}>
                                     </td>
 
                                     <td>
-                                        <if condition="$v.pay_successdate egt 0">
-                                            <{$v.pay_successdate|date='Y-m-d H:i:s',###}>
-                                            <else/>
-                                            <{$v.pool_finish_time|date='Y-m-d H:i:s',###}>
-                                        </if>
-                                        
+                                            <{$v['pay_successdate'] > 0 ? date('Y-m-d H:i:s',$v['pay_successdate']):'---'}>
                                     </td>
                                     <td>
-                                            <if condition="!$v.success_url">
-                                                <{$v.pool_notify_url}>
-                                                <else/>
+    
                                                 <{$v.success_url}>
-                                            </if
+               
                                     </td>
                                     <td>
                                         <if condition="$v.status eq 0 ">未回调</if>
