支付失败处理

--- a/Application/Admin/View/Order/index.html
+++ b/Application/Admin/View/Order/index.html
@@ -68,6 +68,7 @@
               <div class="layui-input-inline">
                 <select name="status">
                   <option value="">全部状态</option>
+                  <option <if condition="$status eq -1">selected</if> value="0">充值失败</option>
                   <option <if condition="$status neq '' && $status eq 0">selected</if> value="0">未处理</option>
                   <option <if condition="$status eq 1">selected</if> value="1">成功，未返回</option>
                   <option <if condition="$status eq 2">selected</if> value="2">成功，已返回</option>
