手机号查询

--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -40,7 +40,7 @@
       </li>
     </ul>
     <ul class="nav navbar-top-links navbar-right">
-      <!--<li>  <a href="<{:U('/')}>" target="_blank"> <i class="fa fa-home"></i> 前台 </a></li>-->
+      <li>  <a href="<{:U("Order/search")}>" target="_blank"> <i class="fa fa-home"></i> 充值查询 </a></li>
       <li class="hidden-xs edtpwd">
         <a href="javascript:;" onClick="reset_pwd('修改管理员密码','<{:U('System/editPassword')}>',380,420)"><i class="iconfont icon-mima"></i>修改密码</a>
       </li>
