--- a/Application/Admin/View/Order/search.html
+++ b/Application/Admin/View/Order/search.html
@@ -78,7 +78,7 @@
             </div>
             <div style="padding:0 20px;line-height: 200%;">
                     订购时间：<{$v.time|date='Y-m-d H:i:s',###}><br/>
-                    订单编号：<{$v.order_id}><br/>
+                    手机号：<{$v.phone}><br/>
                     支付方式：统一支付话费充值<br/>
                     支付流水号：<{$v.trade_id}><br/>
                     产品详情：话费充值产品-<{$v.money|intval}>元<br/>
