--- a/Application/Admin/View/Order/lists.html
+++ b/Application/Admin/View/Order/lists.html
@@ -54,7 +54,7 @@
                         </div>
                       </form>
            
-                      <blockquote class="layui-elem-quote" style="font-size:14px;padding;8px;">
+                      <!-- <blockquote class="layui-elem-quote" style="font-size:14px;padding;8px;">
                             交易总额：<span class="label label-info"><{$count.total.money|format_money}>元</span>  
                             上月总额：<span class="label label-info"><{$count.month.money|format_money}>元</span>
                            上周总额：<span class="label label-info"><{$count.week.money|format_money}>元</span>
@@ -69,7 +69,7 @@
                          今日订单量：<span class="label label-info"><{$count.today.count}></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                          成功订单总量：<span class="label label-info"><{$count.success_total.count}></span> 
                          今日成功订单量：<span class="label label-info"><{$count.success_today.count}></span>
-                      </blockquote>
+                      </blockquote> -->
     
     
                      <div class="list item">
