--- a/Application/Admin/View/PoolProviderOrder/index.html
+++ b/Application/Admin/View/PoolProviderOrder/index.html
@@ -86,7 +86,7 @@
                     </div>
                 </form>
 
-                <blockquote class="layui-elem-quote" style="font-size:14px;padding;8px;">
+                <!-- <blockquote class="layui-elem-quote" style="font-size:14px;padding;8px;">
                     交易总额：<span class="label label-info">
                         <{$count.total.money|format_money}>元
                     </span>
@@ -108,7 +108,7 @@
                     今日订单量：<span class="label label-info">
                         <{$count.today.count}>
                     </span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </blockquote>
+                </blockquote> -->
 
 
                 <div class="list item">
