--- a/Application/Admin/View/PoolProviderOrder/statis.html
+++ b/Application/Admin/View/PoolProviderOrder/statis.html
@@ -124,16 +124,18 @@
                                         <{$v.do_order}>
                                     </td>
                                     <td>
-                                        <{$v.order}>
+                                        <{$v.order_num}>
                                     </td>
                                     <td>
-                                        <{$v.order}>
+                                        <php>
+                                                echo(round($v['order_num']/$v['do_order'] * 100,2));
+                                            </php>%
                                     </td>
                                     <td>
                                         <{$v.order_money}>
                                     </td>
                                     <td>
-                                        <{$v.match}>
+                                        <{$v.match_num}>
                                     </td>
                                     <td>
                                         <{$v.match_money}>
