--- a/Application/Admin/View/AdminLog/index.html
+++ b/Application/Admin/View/AdminLog/index.html
@@ -10,9 +10,21 @@
                 </div>
             </div>
             <div class="ibox-content">
-                    <form class="layui-form" action="" method="get" autocomplete="off">
-                            
-                        </form>
+                <form class="layui-form" action="" method="get" autocomplete="off" id="sform">
+                    <div class="layui-input-inline" style="width:200px;">
+                    <input type="text" name="keywords" autocomplete="off" placeholder="操作人ID/请求地址/操作人IP"
+                            class="layui-input" value="<{$param.keywords}>">
+                    </div>
+                    <div class="layui-input-inline" style="width:300px">
+                        <input type="text" class="layui-input" name="create_time" id="create_time"
+                                placeholder="创建起始时间" value="<{$param.create_time}>">
+                    </div>
+                    <div class="layui-input-inline">
+                        <button onclick="$('#sform').submit();" class="layui-btn"><span
+                                class="glyphicon glyphicon-search"></span> 搜索
+                        </button>
+                    </div>
+                </form>
                 <!--号码商列表-->
                 <div class="layui-field-box">
                 <table class="layui-table">
@@ -48,5 +60,21 @@
     </div>
 </div>
 <include file="Public/footer"/>
+<script>
+    layui.use(['laydate', 'laypage', 'layer', 'table', 'form'], function() {
+        var laydate = layui.laydate //日期
+            , laypage = layui.laypage //分页
+            ,layer = layui.layer //弹层
+            ,form = layui.form //表单
+            , table = layui.table; //表格
+        //日期时间范围
+        laydate.render({
+            elem: '#create_time'
+            , type: 'datetime'
+            ,theme: 'molv'
+            , range: '|'
+        });
+    });
+</script>
 </body>
 </html>
