--- a/Application/User/View/Account/loginrecord.html
+++ b/Application/User/View/Account/loginrecord.html
@@ -10,7 +10,9 @@
                    <thead>
                    <tr>
                        <th></th>
-                       <th>登录时间</th>
+                       <th>操作地址</th>
+                       <th>操作数据</th>
+                       <th>时间</th>
                        <th>地点</th>
                        <th>IP</th>
                    </tr>
@@ -19,6 +21,8 @@
                    <volist name="list" id="vo">
                    <tr>
                        <td><{$key+1}></td>
+                       <td><{$vo.url}></td>
+                       <td><{$vo.data}></td>
                        <td><{$vo.logindatetime}></td>
                        <td><{$vo.loginaddress}></td>
                        <td><{$vo.loginip}></td>
