--- a/Application/User/View/Index/left-nav.html
+++ b/Application/User/View/Index/left-nav.html
@@ -52,7 +52,7 @@
                     <li><a href="<{:U("Account/authorized")}>" class="J_menuItem"><span class="nav-label">认证信息</span></a> </li>
                     <li><a href="<{:U("Account/editPassword")}>" class="J_menuItem"><span class="nav-label">登录密码</span></a> </li>
                     <li><a href="<{:U("Account/editPaypassword")}>" class="J_menuItem"><span class="nav-label">支付密码</span></a> </li>
-                    <li><a href="<{:U("Account/loginrecord")}>" class="J_menuItem"><span class="nav-label">登录记录</span></a> </li>
+                    <li><a href="<{:U("Account/loginrecord")}>" class="J_menuItem"><span class="nav-label">操作记录</span></a> </li>
                     <!-- <li><a href="<{:U("Account/google")}>" class="J_menuItem"><span class="nav-label">Google身份验证</span></a> </li> -->
                 </ul>
             </li>
