--- a/Application/Admin/View/Order/index.html
+++ b/Application/Admin/View/Order/index.html
@@ -182,10 +182,10 @@
                 <td style="text-align:center; color:#369"><{$vo['pay_status']|status=###}></td>
                 <td>
                     <button  class="layui-btn layui-btn-small" onclick="order_view('系统订单号:<{$vo.pay_orderid}>','<{:U('Admin/Order/show',['oid'=>$vo[id]])}>',400)">订单详情</button>
-                  <eq name="vo.pay_status" value="0">
-                 <button  class="layui-btn layui-btn-small layui-btn-danger" onclick="setOrderPaid('设置订单为已支付','<{:U('Admin/Order/setOrderPaid',['orderid'=>$vo[id]])}>',400)">设置为已支付</button>
-                 <button  class="layui-btn layui-btn-small" onclick="checkOrder(<{$vo['id']}>)">查单</button>
-                  </eq>
+                  <if condition="$vo['pay_status']==0 || $vo['pay_status']==3" >
+                    <button  class="layui-btn layui-btn-small layui-btn-danger" onclick="setOrderPaid('设置订单为已支付','<{:U('Admin/Order/setOrderPaid',['orderid'=>$vo[id]])}>',400)">设置为已支付</button>
+                    <button  class="layui-btn layui-btn-small" onclick="checkOrder(<{$vo['id']}>)">查单</button>
+                  </if>
 
                 <neq name="vo.pay_status" value="0">
                         <if condition="$vo['lock_status']==1">
