--- a/Application/Admin/View/PoolProvider/add.html
+++ b/Application/Admin/View/PoolProvider/add.html
@@ -52,6 +52,12 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label class="layui-form-label">允许入库数：</label>
+            <div class="layui-input-inline">
+                <input type="text" name="limit_num"  lay-verify="required" placeholder="0为不限制" autocomplete="off"  id="limit_num" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label">状态：</label>
             <div class="layui-col-md12">  
                 <input type="radio" name="status" value="1" title="已认证" checked>
