--- a/Application/Admin/View/PoolProviderOrder/transe.html
+++ b/Application/Admin/View/PoolProviderOrder/transe.html
@@ -129,7 +129,7 @@
                                     </td>
 
                                     <td>
-                                        <{$v.finish_time|date='Y-m-d H:i:s',###}>
+                                        <{$v['finish_time'] > 0 ? date('Y-m-d H:i:s',$v['finish_time']):'---'}>
                                     </td>
                                     <td>
                                         <if condition="$v.status eq 0 ">未支付</if>
