转号规则修改

--- a/Application/Admin/View/PoolProvider/add.html
+++ b/Application/Admin/View/PoolProvider/add.html
@@ -54,7 +54,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">允许入库数：</label>
             <div class="layui-input-inline">
-                <input type="text" name="limit_num"  lay-verify="required" placeholder="0为不限制" autocomplete="off"  id="limit_num" class="layui-input">
+                <input type="text" name="limit_num"  lay-verify="required" placeholder="-1为不转号|0为全部转|大于0为号码池数量" autocomplete="off"  id="limit_num" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
