--- a/Application/Admin/View/PoolPhone/index.html
+++ b/Application/Admin/View/PoolPhone/index.html
@@ -62,6 +62,7 @@
                             <if condition="$param.status eq 1 ">
                             <th lay-data="{field:'pay_orderid15', width:150}">商户订单号</th>
                         </if>
+                            <th lay-data="{field:'pay_orderid16', width:150}">类型</th>
                             <th lay-data="{field:'pay_orderid9', width:150}">状态</th>
                             <th lay-data="{field:'pay_orderid13', width:180}">时间</th>
                         </tr>
@@ -82,6 +83,7 @@
                                 <if condition="$param.status eq 1 ">
                                 <td><{$v.user_order_id}></td>
                             </if>
+                                <td><{$v['status'] == 2 ? '转号' :'正常'}></td>
                                 <td>
                                     <if condition="$v.lock eq 0 ">等待充值
                                         <a onclick="drawback('<{$v[id]}>')" class="layui-btn layui-btn-mini layui-btn-danger">置为失败</a>
