--- a/Application/Admin/View/PoolProvider/add.html
+++ b/Application/Admin/View/PoolProvider/add.html
@@ -75,6 +75,12 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label class="layui-form-label">爬虫失败数：</label>
+            <div class="layui-input-inline">
+                <input type="text" name="robot_num"  lay-verify="required" placeholder="允许爬取失败之后重新发起数" autocomplete="off"  id="robot_num" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label">状态：</label>
             <div class="layui-col-md12">  
                 <input type="radio" name="status" value="1" title="已认证" checked>
