--- a/Application/Admin/View/PoolProvider/edit.html
+++ b/Application/Admin/View/PoolProvider/edit.html
@@ -73,6 +73,12 @@
                 <input type="text" name="limit_num" value="<{$info['limit_num']}>"  lay-verify="required" placeholder="-1为不转号|0为全部转|大于0为号码池数量" autocomplete="off"  id="limit_num" class="layui-input">
             </div>
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">允许入库数：</label>
+            <div class="layui-input-inline">
+                <input type="text" name="robot_num" value="<{$info['robot_num']}>"  lay-verify="required" placeholder="允许爬取失败之后重新发起数" autocomplete="off"  id="robot_num" class="layui-input">
+            </div>
+        </div>
     <div class="layui-form-item">
         <label class="layui-form-label">状态：</label>
         <div class="layui-col-md12">  
