--- a/Application/Admin/View/PoolProvider/edit.html
+++ b/Application/Admin/View/PoolProvider/edit.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">允许入库数：</label>
+            <label class="layui-form-label">爬虫失败数：</label>
             <div class="layui-input-inline">
                 <input type="text" name="robot_num" value="<{$info['robot_num']}>"  lay-verify="required" placeholder="允许爬取失败之后重新发起数" autocomplete="off"  id="robot_num" class="layui-input">
             </div>
